test/test_units/test_kclvm/test_types/invalid_test_data/schema/schema_9.k
schema Data:
    [name: str]: int
    name: int
